# glauth-utils

./: .gitignore  .jujuignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SAMPLES.md  SECURITY.md  actions.yaml  charmcraft.yaml  config.yaml  integration-requirements.txt  metadata.yaml  pyproject.toml  render_database_schema.py  renovate.json  requirements.txt  tox.ini
.github/workflows/: ci.yaml  cves.yaml  on_pull_request.yaml  on_push.yaml  on_schedule.yaml  promote.yaml  publish.yaml  release_libs.yaml  test.yaml  tests.yaml  tiobe.yaml
img/: database_schema_diagram  integration.puml
lib/charms/glauth_utils/v0/: glauth_auxiliary.py
samples/: sample.ldif
src/: action.py  charm.py  constant.py  constants.py  database.py  exceptions.py  operation.py  operations.py  parser.py  security_logging.py
terraform/: MODULE_SPECS.md  main.tf  outputs.tf
tests/integration/: conftest.py  db.sql  test_charm.py
tests/integration/ldif/: add.ldif  attach.ldif  delete.ldif  modify.ldif  move.ldif  rename.ldif
tests/unit/: conftest.py  test_charm.py  test_parser.py
