# Copyright 2023 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "glauth-utils"
version = "0.1.0"
description = "A Charmed Operator for running GLAuth utilities on Kubnernetes"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}

dynamic = ["version"]

# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Formatting tools configuration
[tool.black]
line-length = 99
target-version = ["py310", "py311"]

# Linting tools configuration
[tool.ruff]
line-length = 99
select = ["E", "W", "F", "C", "N", "D", "I001"]
extend-ignore = [
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
ignore = ["D100", "D101", "D102", "D103", "D105", "D107", "E501", "N818"]
extend-exclude = ["__pycache__", "*.egg_info"]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"
